force-app/main/default/objects/Annonce__c/Annonce__c.object-meta.xml
<CustomObject>
    <label>Annonce</label>
    <nameField>
        <label>Annonce</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Annonces</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>