force-app/main/default/objects/Annonce__c/fields/Budget_Honoraire__c.field-meta.xml
<CustomField>
    <fullName>Budget_Honoraire__c</fullName>
    <label>Budget Honoraire</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>