force-app/main/default/objects/Annonce__c/fields/Budget_travaux_HT__c.field-meta.xml
<CustomField>
    <fullName>Budget_travaux_HT__c</fullName>
    <label>Budget travaux HT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>