force-app/main/default/objects/Annonce__c/fields/Chemin_repertoire_local__c.field-meta.xml
<CustomField>
    <fullName>Chemin_repertoire_local__c</fullName>
    <label>Chemin vers répertoire local</label>
    <type>TextArea</type>
</CustomField>