force-app/main/default/objects/Annonce__c/fields/Complement_sur_Mission__c.field-meta.xml
<CustomField>
    <fullName>Complement_sur_Mission__c</fullName>
    <label>Complément sur Mission</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>