force-app/main/default/objects/Annonce__c/fields/Contenu__c.field-meta.xml
<CustomField>
    <fullName>Contenu__c</fullName>
    <label>Contenu</label>
    <length>70000</length>
    <type>Html</type>
</CustomField>