force-app/main/default/objects/Annonce__c/fields/D_partement_de_l_utilisateur__c.field-meta.xml
<CustomField>
    <fullName>D_partement_de_l_utilisateur__c</fullName>
    <formula>TEXT(Owner:User.Departement_du_Pole__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Département de l&apos;utilisateur</label>
    <type>Text</type>
</CustomField>