force-app/main/default/objects/Annonce__c/fields/Date_d_echeance__c.field-meta.xml
<CustomField>
    <fullName>Date_d_echeance__c</fullName>
    <label>Date d&apos;échéance</label>
    <type>DateTime</type>
</CustomField>