force-app/main/default/objects/Annonce__c/fields/Date_de_parution__c.field-meta.xml
<CustomField>
    <fullName>Date_de_parution__c</fullName>
    <label>Date de parution</label>
    <type>Date</type>
</CustomField>