force-app/main/default/objects/Annonce__c/fields/IdExplore__c.field-meta.xml
<CustomField>
    <fullName>IdExplore__c</fullName>
    <externalId>true</externalId>
    <label>ID Explore</label>
    <length>20</length>
    <type>Text</type>
</CustomField>