force-app/main/default/objects/Annonce__c/fields/IdExploreSimplifie__c.field-meta.xml
<CustomField>
    <fullName>IdExploreSimplifie__c</fullName>
    <description>ID Explore sans typage de marché</description>
    <label>ID Explore simplifie</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>