force-app/main/default/objects/Annonce__c/fields/Int_r_t__c.field-meta.xml
<CustomField>
    <fullName>Int_r_t__c</fullName>
    <label>Intérêt</label>
    <summaryFilterItems>
        <field>Veille__c.Interet__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Veille__c.Annonce__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>