force-app/main/default/objects/Annonce__c/fields/Lien_vers_l_annonce__c.field-meta.xml
<CustomField>
    <fullName>Lien_vers_l_annonce__c</fullName>
    <label>Lien vers l&apos;annonce</label>
    <type>Url</type>
</CustomField>