force-app/main/default/objects/Annonce__c/fields/Objet__c.field-meta.xml
<CustomField>
    <fullName>Objet__c</fullName>
    <label>Objet</label>
    <length>250</length>
    <type>Text</type>
</CustomField>