force-app/main/default/objects/Annonce__c/fields/Operation__c.field-meta.xml
<CustomField>
    <fullName>Operation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opération</label>
    <referenceTo>Operation__c</referenceTo>
    <relationshipName>Veilles</relationshipName>
    <type>Lookup</type>
</CustomField>