force-app/main/default/objects/Annonce__c/fields/Origine__c.field-meta.xml
<CustomField>
    <fullName>Origine__c</fullName>
    <label>Origine</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BOAMP</fullName>
            </value>
            <value>
                <fullName>Moniteur</fullName>
            </value>
            <value>
                <fullName>Journal Officiel Européen</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>