force-app/main/default/objects/Annonce__c/fields/Pays__c.field-meta.xml
<CustomField>
    <fullName>Pays__c</fullName>
    <label>Pays</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>France</fullName>
            </value>
            <value>
                <fullName>A fournir par Ingérop</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>