force-app/main/default/objects/Annonce__c/fields/Rue__c.field-meta.xml
<CustomField>
    <fullName>Rue__c</fullName>
    <label>Rue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>