force-app/main/default/objects/Annonce__c/fields/Statut__c.field-meta.xml
<CustomField>
    <fullName>Statut__c</fullName>
    <label>Statut</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Diffusée</fullName>
                <default>true</default>
                <label>Diffusée</label>
            </value>
            <value>
                <fullName>Prise en compte</fullName>
                <label>Affectée</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>