force-app/main/default/objects/Annonce__c/fields/Telephone__c.field-meta.xml
<CustomField>
    <fullName>Telephone__c</fullName>
    <label>Téléphone</label>
    <type>Phone</type>
</CustomField>