force-app/main/default/objects/Annonce__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Appel d&apos;offre</fullName>
            </value>
            <value>
                <fullName>Appel à candidature</fullName>
            </value>
            <value>
                <fullName>Concours</fullName>
            </value>
            <value>
                <fullName>Conception réalisation</fullName>
            </value>
            <value>
                <fullName>CREM</fullName>
            </value>
            <value>
                <fullName>PPP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>