force-app/main/default/objects/Annonce__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Activite__c</columns>
    <columns>Budget_Honoraire__c</columns>
    <columns>Budget_travaux_HT__c</columns>
    <columns>Exclusive__c</columns>
    <columns>Statut__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Date_de_parution__c</columns>
    <columns>Date_d_echeance__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
</ListView>